--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@ Research Professor, Ph.D. <br />
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
 <ol>
+<li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.</p>
+</li>
 <li><p>T. R. Gadekallu, Q.-V. Pham, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
 </li>
-<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-based Software-Defined Vehicular Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
+<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
 </li>
-<li><p>T. Huynh-The, C.-H. Hua, V.-S. Doan, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9475953">Accurate Deep CNN-based Waveform Recognition for Intelligent Radar Systems</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 25, no. 9, pp. 2938-2942, Sep. 2021.</p>
+<li><p>D. C. Nguyen, M. Ding, Q.-V. Pham, P. N. Pathirana, L. B. Le, A. Seneviratne, J. Li, D. Niyato, and H. V. Poor, &ldquo;<a href="https://ieeexplore.ieee.org/document/9403374">Federated Learning Meets Blockchain in Edge Computing: Opportunities and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 8, no. 16, pp. 12806-12825, Aug. 2021.</p>
 </li>
 <li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 10, no. 8, pp. 1638-1642, Aug. 2021.</p>
 </li>
@@ -123,7 +125,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-24 10:19:10 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 11:17:11 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
