--- a/publication.html
+++ b/publication.html
@@ -44,7 +44,7 @@
 <ol>
 <li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications</a>, Springer, 2021 [Eds].</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Architecture, Applications, and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 [Eds].</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 [Eds].</p>
 </li>
 <li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 [Eds].</p>
 </li>
@@ -57,6 +57,10 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>," under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+</li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; under revision, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">UAV-Aided Short-Packet NOMA Networks with Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
@@ -77,9 +81,7 @@
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
 </li>
-<li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>" under review, <i>Proceedings of the IEEE</i>.</p>
-</li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2101.07394">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>," under review, <i>IEEE Network</i>.</p>
+<li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>" under revision, <i>Proceedings of the IEEE</i>.</p>
 </li>
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
@@ -94,7 +96,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
+<li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9714464">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
@@ -135,7 +137,7 @@
 <ol>
 <li><p>S. Ramasubbareddy, S. Ramasamy, K. S. Sahoo, R. L. Kumar, <b>Q.-V. Pham</b>, and N.-N. Dao, &ldquo;<a href="https://ieeexplore.ieee.org/document/9239393">CAVMS: Application-Aware Cloudlet Adaption and VM Selection Framework for Multi-Cloudlet Environment</a>,&rdquo; <i>IEEE Systems Journal</i>, vol. 15, no. 4, pp. 5098-5106, Dec. 2021.</p>
 </li>
-<li><p>L. Nkenyereye, L. Nkenyereye, <b>Q.-V. Pham</b>, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-based Software-Defined Vehicular Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
+<li><p>L. Nkenyereye, L. Nkenyereye, <b>Q.-V. Pham</b>, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
 </li>
 <li><p>H. Han, J. Zhao, W. Zhai, Z. Xiong, D. Niyato, M. D. Renzo, <b>Q.-V. Pham</b>, W. Lu, and K.-Y. Lam, &ldquo;<a href="https://ieeexplore.ieee.org/document/9514563">Reconfigurable Intelligent Surface Aided Power Control for Physical-Layer Broadcasting</a>,&rdquo; <i>IEEE Transactions on Communications</i>, vol. 69, no. 11, pp. 7821-7836, Nov. 2021.</p>
 </li>
@@ -302,7 +304,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-16 09:52:59 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-24 11:17:12 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
