--- a/publication.html
+++ b/publication.html
@@ -57,9 +57,11 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, Duc Van Le, and V. J. Reddi, &ldquo;{}{Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise},&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
+</li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>," under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Transactions on Artificial Intelligence</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; under revision, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
@@ -248,9 +250,9 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.  </p>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.  </p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://www.dropbox.com/s/j1sh4zbqtooa7u7/1570766888_wcnc_2022.pdf?dl=0">Automatic Modulation Classification with Low-Cost Attention Network for Impaired OFDM Signals</a>,&rdquo; in <i>IEEE Wireless Communications and Networking Conference (WCNC)</i>, Austin, TX, USA, Apr. 2022.</p>
 </li>
@@ -276,13 +278,13 @@
 </li>
 <li><p>H. Han, J. Zhao, D. Niyato, M. D. Renzo, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9148827">Intelligent Reflecting Surface Aided Network: Power Control for Physical-Layer Broadcasting</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Dublin, Ireland, Jun. 2020.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, T. D. T. Nguyen, M. D. Hossain, J. H. Park, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9001756">A Study on Computation Offloading in MEC Systems using Whale Optimization Algorithm</a>,&rdquo; in <i>International Conference on Ubiquitous Information Management and Communication</i>, Taichung, Taiwan, 2020.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, T. D. T. Nguyen, M. D. Hossain, J. H. Park, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9001756">A Study on Computation Offloading in MEC Systems using Whale Optimization Algorithm</a>,&rdquo; in <i>International Conference on Ubiquitous Information Management and Communication (IMCOM)</i>, Taichung, Taiwan, 2020.</p>
 </li>
 <li><p>I. Nadia, <b>Q.-V. Pham</b>, and W.-J. Hwang, "<a href="">Resource Management in NOMA-based Unmanned Aerial Vehicles Wireless Backhaul Networks</a>, in <i>Korea-Japan Joint Workshop on Complex Communication Sciences (KJCCS2020)</i>, Hiroshima, Japan, Jan. 2020.</p>
 </li>
 <li><p>H.-T. Hoang, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved S-Shaped Transfer Function for Binary Whale Optimization Algorithm</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA2019)</i>, Ho Chi Minh city, Vietnam, Jul. 2019.</p>
 </li>
-<li><p>H. N. T. Luan, <b>Q.-V. Pham</b>, Q. D. Nguyen, X.-Q. Pham, V. D. Nguyen, and E.-N. Huh, &ldquo;<a href="https://link.springer.com/chapter/10.1007/978-3-030-19063-7_11">Energy Efficient Computation Offloading with Multi-MEC Servers in 5G two-tier Heterogeneous Networks</a>,&rdquo; in <i>International Conference on Ubiquitous Information Management and Communication</i>, Phuket Thailand, Jan. 2019.</p>
+<li><p>H. N. T. Luan, <b>Q.-V. Pham</b>, Q. D. Nguyen, X.-Q. Pham, V. D. Nguyen, and E.-N. Huh, &ldquo;<a href="https://link.springer.com/chapter/10.1007/978-3-030-19063-7_11">Energy Efficient Computation Offloading with Multi-MEC Servers in 5G two-tier Heterogeneous Networks</a>,&rdquo; in <i>International Conference on Ubiquitous Information Management and Communication (IMCOM)</i>, Phuket Thailand, Jan. 2019.</p>
 </li>
 <li><p><b>Q.-V. Pham</b> and W.-J. Hwang, &ldquo;<a href="https://www.dropbox.com/s/krr79m9o6kntw97/MITA_2016_paper_8.pdf?dl=0">Fair and Energy-Efficient Power Control in Spectrum-Sharing Wireless Networks</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA2016)</i>, Luang Prabang, Laos, Jun. 2016.</p>
 </li>
@@ -304,7 +306,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 11:17:12 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-02 16:53:23 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
