--- a/activity.html
+++ b/activity.html
@@ -104,6 +104,8 @@
 </li>
 <li><p>IEEE Wireless Communications </p>
 </li>
+<li><p>IEEE Consumer Electronics Magazine</p>
+</li>
 <li><p>IEEE Vehicular Technology Magazine</p>
 </li>
 <li><p>IEEE Communications Standards Magazine</p>
@@ -125,7 +127,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-24 11:20:29 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-02 16:51:01 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
