--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,7 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, Duc Van Le, and V. J. Reddi, &ldquo;{}{Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise},&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, Duc Van Le, and V. J. Reddi, &ldquo;Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>," under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
@@ -306,7 +306,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-02 16:53:23 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-02 16:55:26 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
