--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,7 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>," under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
@@ -89,8 +89,6 @@
 </li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
 </li>
-<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; under revision, <i>IEEE Network</i>.</p>
-</li>
 <li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 </ol>
@@ -98,6 +96,10 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
+</li>
+<li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.dropbox.com/s/bkwkhg2mssrf56w/Elsevier_JNCA_ZSM_Accepted.pdf?dl=0">A Survey on Zero Touch Network and Service (ZSM) Management for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, in press.</p>
+</li>
 <li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9714464">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
@@ -306,7 +308,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-02 16:56:17 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-07 11:50:30 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
