--- a/publication.html
+++ b/publication.html
@@ -35,22 +35,22 @@
 <p><div id="Books"></p>
 <h2>Books</h2>
 <ol>
-<li><p>C. de Alwis, <b>Q.-V. Pham</b>, P. Kumar, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Mar. 2022.</p>
+<li><p>C. de Alwis, <b>Q.-V. Pham</b>, P. Kumar, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Jun. 2022.</p>
 </li>
 </ol>
 <p></div></p>
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications</a>, Springer, 2021 [Eds].</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 [Eds].</p>
+<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 [Eds].</p>
+<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022 [Eds].</p>
+<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022.</p>
 </li>
-<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022 [Eds].</p>
+<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7"><i>Fog/Edge Computing For Security, Privacy, and Applications</i></a>, Springer, 2021.</p>
 </li>
 </ol>
 <p></div></p>
@@ -308,7 +308,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-10 21:51:32 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-10 23:14:00 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
