--- a/publication.html
+++ b/publication.html
@@ -69,8 +69,6 @@
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
-</li>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
@@ -94,6 +92,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+</li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
@@ -308,7 +308,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-10 23:14:00 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-15 11:32:22 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
