--- a/grantaward.html
+++ b/grantaward.html
@@ -38,7 +38,7 @@ Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;</p>
 </ul>
 <ul>
 <li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
-Co-Principal Investigator <br /> 
+Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
 Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;</p>
 </li>
 </ul>
@@ -79,7 +79,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 18:18:17 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-16 09:34:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
