--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://publons.com/researcher/1885326/quoc-viet-pham/">Publons</a></p>
 </li>
-<li><p>Address: No. 310-2, ABC Center, Pusan National University, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
+<li><p>Address: No. 501, ABC Center, Pusan National University, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
 </li>
 </ul>
 </td></tr></table>
 <p><div id="Research Interests"></p>
 <h2>Research Interests</h2>
 <ul>
-<li><p><b>Edge Computing</b>: resource optimization, edge of things, and edge AI.</p>
+<li><p><b>Edge Computing</b>: resource optimization, aerial computing, edge of things, and edge AI.</p>
 </li>
 <li><p><b>Future Networks</b>: 6G, Internet of Things, intelligent surfaces, and blockchain. </p>
 </li>
@@ -129,7 +129,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-15 11:42:07 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-16 09:35:00 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
