--- a/publication.html
+++ b/publication.html
@@ -35,16 +35,16 @@
 <p><div id="Books"></p>
 <h2>Books</h2>
 <ol>
-<li><p>C. de Alwis, <b>Q.-V. Pham</b>, P. Kumar, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Jun. 2022.</p>
+<li><p>C. de Alwis, <b>Q.-V. Pham</b>, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Jun. 2022.</p>
 </li>
 </ol>
 <p></div></p>
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022.</p>
 </li>
@@ -59,7 +59,7 @@
 <ol>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
 </li>
-<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>," under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
+<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Transactions on Artificial Intelligence</i>.</p>
 </li>
@@ -79,7 +79,7 @@
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
 </li>
-<li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>" under revision, <i>Proceedings of the IEEE</i>.</p>
+<li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; under revision, <i>Proceedings of the IEEE</i>.</p>
 </li>
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
@@ -92,9 +92,9 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
-<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
@@ -175,11 +175,11 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021. [<a href="https://www.dropbox.com/s/frhhm9nlfx1pweg/Matlab_Code.zip?dl=0">MATLAB Code</a>]</p>
 </li>
-<li><p>C. de Alwis, A. Kalla, <b>Q.-V. Pham</b>, P. Kumar, K. Dev, W.-J. Hwang, and M. Liyanage, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/9397776">Survey on 6G Frontiers: Trends, Applications, Requirements, Technologies and Future Research</a>," <i>IEEE Open Journal of the Communications Society</i>, vol. 2, pp. 836-886, Apr. 2021.</p>
+<li><p>C. de Alwis, A. Kalla, <b>Q.-V. Pham</b>, P. Kumar, K. Dev, W.-J. Hwang, and M. Liyanage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9397776">Survey on 6G Frontiers: Trends, Applications, Requirements, Technologies and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 2, pp. 836-886, Apr. 2021.</p>
 </li>
 <li><p>N.-N. Dao, <b>Q.-V. Pham</b>, D.-T. Do, S. Dustdar, &ldquo;<a href="https://ieeexplore.ieee.org/document/9420082">The Sky is the Edge—Toward Mobile Coverage from the Sky</a>,&rdquo; <i>IEEE Internet Computing</i>, vol. 25, no. 2, pp. 101-108, Mar.-Apr. 2021.</p>
 </li>
-<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, M. Zeng, H.-C. Kim, and W.-J. Hwang, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/9364991">UAV-enabled Wireless Backhaul Networks using Non-Orthogonal Multiple Access</a>," <i>IEEE Access</i>, vol. 9, pp. 36689-36698, Feb. 2021.</p>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, M. Zeng, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9364991">UAV-enabled Wireless Backhaul Networks using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 36689-36698, Feb. 2021.</p>
 </li>
 <li><p>S. Bhattacharya, P. K. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, S. R. Krishnan S, C. L. Chowdhary, M. Alazab, and M. J. Piran, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670720308076">Deep Learning and Medical Image Processing for Coronavirus (COVID-19) Pandemic: A Survey</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 65, pp. 102589, Feb. 2021.</p>
 </li>
@@ -308,7 +308,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-15 11:32:22 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-22 09:33:24 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
