--- a/publication.html
+++ b/publication.html
@@ -63,8 +63,6 @@
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Transactions on Artificial Intelligence</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; under revision, <i>IEEE Wireless Communications Letters</i>.</p>
-</li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">UAV-Aided Short-Packet NOMA Networks with Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
@@ -92,6 +90,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
+</li>
 <li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
@@ -308,7 +308,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-22 09:33:24 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-23 15:31:41 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
