--- a/publication.html
+++ b/publication.html
@@ -35,7 +35,7 @@
 <p><div id="Books"></p>
 <h2>Books</h2>
 <ol>
-<li><p>C. de Alwis, <b>Q.-V. Pham</b>, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Jun. 2022.</p>
+<li><p>C. de Alwis, <b>Q.-V. Pham</b>, and M. Liyanage, <a href="">6G Frontiers: New Technologies, Applications, and Standardization Approaches</a>, Wiley-IEEE Press, expected Oct. 2022.</p>
 </li>
 </ol>
 <p></div></p>
@@ -57,13 +57,15 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
+</li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Transactions on Artificial Intelligence</i>.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">UAV-Aided Short-Packet NOMA Networks with Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
@@ -79,7 +81,7 @@
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; under revision, <i>Proceedings of the IEEE</i>.</p>
 </li>
-<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
+<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Computer Networks</i>.</p>
 </li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
 </li>
@@ -90,7 +92,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9743401">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
@@ -112,13 +114,13 @@
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
-<li><p>R. Ruby, <b>Q.-V. Pham</b>, K. Wu, A. A. Heidari, H. Chen, and B. M. ElHalawany, &ldquo;<a href="https://ieeexplore.ieee.org/document/9528850">Enhancing Secrecy Performance of Cooperative NOMA-based IoT Networks via Multi-Antenna Aided Artificial Noise</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
-</li>
 <li><p>H. Yang, R. Ruby, <b>Q.-V. Pham</b>, and K. Wu, &ldquo;<a href="https://ieeexplore.ieee.org/document/9525446">Aiding a Disaster Spot via Multi-UAV-based IoT Networks: Energy and Mission Completion Time-Aware Trajectory Optimization</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press. </p>
 </li>
 <li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 131, pp 209-226, Jun. 2022.</p>
 </li>
 <li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
+</li>
+<li><p>R. Ruby, <b>Q.-V. Pham</b>, K. Wu, A. A. Heidari, H. Chen, and B. M. ElHalawany, &ldquo;<a href="https://ieeexplore.ieee.org/document/9528850">Enhancing Secrecy Performance of Cooperative NOMA-based IoT Networks via Multi-Antenna Aided Artificial Noise</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 7, pp. 5108-5127, Apr. 2022.</p>
 </li>
 <li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
@@ -308,7 +310,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-23 15:31:41 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-04 17:04:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
