--- a/publication.html
+++ b/publication.html
@@ -100,7 +100,7 @@
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
-<li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.dropbox.com/s/bkwkhg2mssrf56w/Elsevier_JNCA_ZSM_Accepted.pdf?dl=0">A Survey on Zero Touch Network and Service (ZSM) Management for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, in press.</p>
+<li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804522000297">A Survey on Zero Touch Network and Service (ZSM) Management for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, in press.</p>
 </li>
 <li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9714464">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
 </li>
@@ -109,8 +109,6 @@
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9676557">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
-</li>
-<li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
@@ -125,6 +123,8 @@
 <li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://dl.acm.org/doi/10.1145/3501296">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, vol. 55, no. 3, pp. 1-37, Apr. 2022.</p>
+</li>
+<li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, vol. 16, no. 1, pp. 1540-1547, Mar. 2022.</p>
 </li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, vol. 26, pp. 100257, Mar. 2022.</p>
 </li>
@@ -310,7 +310,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-08 09:32:40 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 14:35:24 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
