--- a/publication.html
+++ b/publication.html
@@ -71,7 +71,7 @@
 </li>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>.</p>
 </li>
@@ -98,7 +98,7 @@
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
-<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
+<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="https://arxiv.org/abs/2204.07854">IIFNet: A Fusion based Intelligent Service for Noisy Preamble Detection in 6G</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
 <li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804522000297">A Survey on Zero Touch Network and Service (ZSM) Management for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, in press.</p>
 </li>
@@ -310,7 +310,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-11 14:35:24 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-19 15:53:19 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
